Fixed bug with text overflow on subreddit page on small screens

--- a/react-app/src/components/Subreddit/css/index.css
+++ b/react-app/src/components/Subreddit/css/index.css
@@ -556,5 +556,23 @@ h1 {
 	.empty-post-text-container-flex {
 		width: 100vw;
 		max-width: 100vw;
+		min-width: 100vw
+	}
+
+	.sub-display-name {
+		display: none;
+	}
+
+	.title-name {
+		height: 80%;
+	}
+
+	.sub-name {
+		font-size: 18px;
+		color: black;
+		height: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 }
